Update README and out/production gone